--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <!-- Task cards from Lambda will be inserted here -->
         </div>
         <!-- Single Edit button -->
-        <button id="editButton" style="display:none;" onclick="showEditPopup()">Edit All Tasks</button>
+        <button id="editButton" style="display:none;" onclick="showEditPopup()">Edit Tasks</button>
     </div>
 
     <!-- Popup for editing tasks -->
