--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <td>${taskDescription}</td>
                     <td>${startDate}</td>
                     <td>${endDate}</td>
-                    <td><input type="number" value="${rate}" /></td>
+                    <td><input type="number" min="1" max="5" /></td>
                     <td><input type="text" value="${remarks}" /></td>
                 </tr>
             `;
