--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     <td>${startDate}</td>
                     <td>${endDate}</td>
                     <td><input type="number" min="1" max="5" /></td>
-                    <td><input type="text" value="${remarks}" /></td>
+                    <td><input type="text"/></td>
                 </tr>
             `;
         }
